--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "async": "^2.6.1",
+    "async-parallel": "^1.2.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "firebase": "^5.5.1",
