--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "firebase": "^5.5.1",
+    "json2csv": "^4.3.5",
+    "jsonexport": "^2.4.1",
     "pg": "^6.4.2",
     "pg-hstore": "2.3.2",
-    "sequelize": "3.17.0"
+    "sequelize": "^5.1.0"
   }
 }
