Node-Python connection

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonexport": "^2.4.1",
     "pg": "^6.4.2",
     "pg-hstore": "2.3.2",
+    "python-shell": "^1.0.7",
     "sequelize": "^5.1.0"
   }
 }
